Tell the client which pack cards are new
